index.htm filr created

--- a/FrontEnd/pages/customerPage.html
+++ b/FrontEnd/pages/customerPage.html
@@ -147,8 +147,8 @@
 <div class="sidebar" style="background-color: #a3b6ee">
   <a href="adminPanel.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
   <a href="SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
-  <a href="OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
-  <a href="SupplierManagement.html"><i class="fas fa-truck"></i> Suppliers</a>
+  <a href="orderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
+  <a href="supplier.html"><i class="fas fa-truck"></i> Suppliers</a>
   <a href="../adminPages/CustomerManagement.html"><i class="fas fa-users"></i> Customers</a>
   <a href="employee.html"><i class="fas fa-user-tie"></i> Employees</a>
   <a href="item.html"><i class="fas fa-boxes"></i> Inventory</a>
