--- a/FrontEnd/pages/userDashboard.html
+++ b/FrontEnd/pages/userDashboard.html
@@ -49,7 +49,7 @@
             <div class="sidebar">
                 <a href="../pages/userDashboard.html">Dashboard</a>
                 <a id="userSalesControllerSection">Sales</a>
-                <a href="OrderDetails.html">Sale Details</a>
+                <a href="orderDetails.html">Sale Details</a>
                 <a id="userSupplierControllerSection">Suppliers</a>
                 <a id="userCustomerControllerSection">Customers</a>
                 <a id="userEmployeeControllerSection">Employees</a>
