--- a/FrontEnd/pages/User.html
+++ b/FrontEnd/pages/User.html
@@ -89,8 +89,8 @@
 <div class="sidebar">
     <a href="adminPanel.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
     <a href="../adminPages/SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
-    <a href="OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
-    <a href="SupplierManagement.html" class="active"><i class="fas fa-truck"></i> Suppliers</a>
+    <a href="orderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
+    <a href="supplier.html" class="active"><i class="fas fa-truck"></i> Suppliers</a>
     <a href="customerPage.html"><i class="fas fa-users"></i> Customers</a>
     <a href="employee.html"><i class="fas fa-user-tie"></i> Employees</a>
     <a href="item.html"><i class="fas fa-boxes"></i> Inventory</a>
