--- a/FrontEnd/pages/supplier.html
+++ b/FrontEnd/pages/supplier.html
@@ -11,7 +11,215 @@
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" name="viewport">
   <meta content="green" name="theme-color">
 
-  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../assets/vendor/fontawesome-fre<!DOCTYPE html>
+<html lang="en">
+  <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="../img/icon.jpeg" sizes="32x32">
+    <meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <title>Supplier Service</title>
+
+    <link rel="stylesheet" href="../css/loginPage.css">
+    <link rel="stylesheet" href="../css/menuBar.css">
+    <link rel="stylesheet" href="../css/txt.css">
+    <link rel="stylesheet" href="../bootstrap-5.3.1-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/menuBar.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Include Font Awesome for icons -->
+    <link href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
+<body>
+
+
+<div id="mobile_navi">    <div id="mySidenav" class="sidenav" style="background-color: white">
+
+  <a href="../view/adminPanel.html" class="btn btn-success btn-block mb-3" style="color: black">Dashboard</a>
+
+  <a href="../view/customerPage.html" class="btn btn-warning btn-block mb-3"style="color: black">Customers</a>
+
+  <a href="../view/item.html" class="btn btn-success btn-block mb-3"style="color: black">Inventory</a>
+
+  <a href="../view/order.html" class="btn btn-warning btn-block mb-3"style="color: black">Sale</a>
+
+  <a href="../view/supplier.html" class="btn btn-success btn-block mb-3"style="color: black">Suppliers</a>
+
+  <a href="../view/employee.html" class="btn btn-warning btn-block mb-3"style="color: black">Employees</a>
+
+
+</div>
+</div>
+
+<div class="container-fluid dashBordSet">
+
+  <div class="row">
+
+    <div class="col-12 col-xxl-9 col-xl-9 col-lg-9 col-md-9">
+      <h1 style="margin-left: 300px">Supplier Service</h1>
+    </div>
+
+    <div class="col-12 col-xxl-3 col-xl-3 col-lg-3 col-md-3">
+      <div class="form-group">
+        <div class="search-container" style="position: relative;">
+          <input type="text" class="form-control fw-bold " id="supplierSearchTxt" placeholder=""/>
+          <i class="fas fa-search search-icon" id="supplierSearchBtn" style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%);"></i>
+        </div>
+      </div>
+    </div>
+
+
+    <div id="textFieldGroup" class="row mt-6 rounded-2 rowColur" style="background-color: #a3cfbb" >
+
+
+      <div class="col-12 col-xxl-2 col-xl-2 col-lg-3 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="supplierCodeTxt" class="text-black fw-bold ">Supplier  Code</label>
+          <div class="search-container">
+            <input type="text" class="form-control fw-bold border border-1  fw-bold " id="supplierCodeTxt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-2 col-xl-2 col-lg-3 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="supplierNameTxt" class="text-black fw-bold ">Supplier  Name</label>
+          <div class="search-container">
+            <input type="text" class="form-control fw-bold border border-1  fw-bold " id="supplierNameTxt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-2 col-xl-2 col-lg-6 col-md-6 col-sm-6 mt-3">
+        <div class="form-group">
+          <label for="supCategoryOption" class="text-black fw-bold">Category</label>
+          <div class="search-container">
+            <select class="form-select border border-1  fw-bold" aria-label="Default select example" id="supCategoryOption">
+              <option selected>Select Category</option>
+              <option selected value="NATIONAL">NATIONAL</option>
+              <option selected value="INTERNATIONAL">INTERNATIONAL</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-3 col-xl-6 col-lg-6 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="address1Txt" class="text-black fw-bold ">Address 1</label>
+          <div class="search-container">
+            <input type="text" class="form-control fw-bold border border-1  fw-bold " id="address1Txt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-3 col-xl-6 col-lg-6 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="address2Txt" class="text-black fw-bold ">Address 2</label>
+          <div class="search-container">
+            <input type="text" class="form-control fw-bold border border-1  fw-bold " id="address2Txt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-2 col-xl-6 col-lg-6 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="address3Txt" class="text-black fw-bold ">Address 3</label>
+          <div class="search-container">
+            <input type="text" class="form-control fw-bold border border-1  fw-bold " id="address3Txt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-2 col-xl-6 col-lg-6 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="contact1Txt" class="text-black fw-bold ">Contact 1</label>
+          <div class="search-container">
+            <input type="text" class="form-control fw-bold border border-1 fw-bold " id="contact1Txt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-2 col-xl-6 col-lg-6 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="contact2Txt" class="text-black fw-bold ">Contact 2</label>
+          <div class="search-container">
+            <input type="text" class="form-control fw-bold border border-1  fw-bold " id="contact2Txt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-3 col-xl-6 col-lg-6 col-md-6 col-sm-6  mt-3">
+        <div class="form-group">
+          <label for="mailTxt" class="text-black fw-bold ">Mail</label>
+          <div class="search-container">
+            <input type="email" class="form-control fw-bold border border-1  fw-bold " id="mailTxt" placeholder="" />
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-xxl-3 col-xl-6 col-lg-12 col-sm-6 col-md-6 d-flex justify-content-center mt-4 mt-xxl-4 mt-xl-4 mt-lg-4 mt-md-4 mt-sm-4  ">
+        <button type="button" class="btn btn-success fw-bold col-12 " id="supplierSaveBtn">Save Supplier</button>
+      </div>
+
+      <div class="col-12 col-xxl-3 col-xl-6 col-lg-12 col-sm-6 col-md-6 d-flex justify-content-center mt-4 mt-xxl-4 mt-xl-4 mt-lg-4 mt-md-4 mt-sm-4">
+        <button type="button" class="btn btn-warning fw-bold col-12 " id="supplierUpdateBtn">Update Supplier</button>
+      </div>
+
+      <div class="col-12 col-xxl-3 col-xl-6 col-lg-12 col-sm-6 col-md-6 d-flex justify-content-center mt-4 mt-xxl-4 mt-xl-4 mt-lg-4 mt-md-4 mt-sm-4 ">
+        <button type="button" class="btn btn-danger fw-bold col-12 " id="supplierDeleteBtn">Delete Supplier</button>
+      </div>
+
+
+
+      <div class="col-12   mt-1 table-responsive p-0  mt-5">
+        <table class="table">
+          <thead>
+          <tr>
+            <th scope="col">Supplier Code</th>
+            <th scope="col">Name</th>
+            <th scope="col">Category</th>
+            <th scope="col">Address 1</th>
+            <th scope="col">Address 2</th>
+            <th scope="col">Address 3</th>
+            <th scope="col">Contact 1</th>
+            <th scope="col">Contact 2</th>
+            <th scope="col">Mail</th>
+
+          </tr>
+          </thead>
+          <tbody id="supplier_Table">
+
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+
+
+
+
+
+  </div>
+
+</div>
+
+<script src=" https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="../Controller/mobileNavJs.js"></script>
+<script src="../Controller/SupplierController.js" type="module"></script>
+</body>
+</html>e/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link href="../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
   <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
@@ -142,7 +350,7 @@
 <div class="sidebar" style="background-color: #a3b6ee">
   <a href="adminPanel.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
   <a href="SaleManagement.html"><i class="fas fa-dollar-sign"></i> Sales</a>
-  <a href="OrderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
+  <a href="orderDetails.html"><i class="fas fa-receipt"></i> Sale Details</a>
   <a href="../adminPages/SupplierManagement.html" class="active"><i class="fas fa-truck"></i> Suppliers</a>
   <a href="customerPage.html"><i class="fas fa-users"></i> Customers</a>
   <a href="employee.html"><i class="fas fa-user-tie"></i> Employees</a>
