--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -22,30 +22,21 @@
 
 
 </head>
-<body class="bg-black">
+<body class="bg-warning">
 
     <div class="row">
 
 
         <div class="col-12 ">
-            <img src="img/shoes.png" class="shoes-img">
+            <img src="assets/img/customer.jpg" class="shoes-img" style="width: 708px;margin-top: 100px;">
         </div>
 
         <div class="col-12 " style="height: 200px">
-            <img src="img/logo.png" class="h-75">
+            <img src="img/icon.jpeg" class="h-75" style="margin-left: 50px">
         </div>
 
         <div class="col-12">
             <h1  class="text-white ml-3" id="companyName">Hello Shoes Pvt. Ltd</h1>
-        </div>
-
-        <div class="col-12">
-            <h5 id="about" class="text-white ml-3">At Shoes Pvt Ltd, we're not just about selling shoes. <br>
-                we're about creating memorable experiences for our<br>
-                customers. Join us on this journey as<br>
-                we revolutionize the way you<br>
-                shop for footwear.<br>
-            </h5>
         </div>
 
         <div class="col-12">
